# pii-redaction-eval

./: .gitignore  DATA_LICENSES.md  LICENSE  Makefile  README.md  pyproject.toml
configs/models/: experiment_models.json  qwen_gguf_runtime.json
configs/prompts/: qwen_direct_redaction_v1.txt
data/: ai4privacy_dataset.md  stress_set_v1_schema.md
data/fixtures/: local-vault-stress-set-v1.jsonl
docs/: index.html
results_summary/: registry.json  table_1_experimental_conditions.csv  table_2_main_validation_results.csv  table_3_runtime_reliability.csv  table_4_category_leakage_summary.csv  table_5_stress_set_results.csv  table_6_opf_rules_delta.csv  table_7_pipeline_ablation.csv  table_8_failure_examples.csv  table_9_supporting_split_consistency.csv
scripts/: build_ai4privacy_fixtures.py  build_stress_fixture.py  render_latex_tables.py  run_gguf_fixture.py  run_opf_fixture.py  run_presidio_fixture.py
src/redaction_research/: __init__.py  benchmark.py  cli.py  metrics.py  presidio_smoke.py  safety_rules.py  stress_fixture.py
tests/: test_gguf_runner.py  test_metrics.py  test_render_latex_tables.py  test_safety_rules.py  test_stress_fixture.py
